adding validation
